Fixes left-panel overflow

--- a/web-ui/src/main/resources/catalog/views/sextant/less/gn_search_sextant.less
+++ b/web-ui/src/main/resources/catalog/views/sextant/less/gn_search_sextant.less
@@ -310,11 +310,13 @@
 .sxt-left-panel {
   padding: 0 .5em 0 1.5em;
   margin-top: -2.5em;
+  height: calc(100% + 2.5em);
   > div {
     border-radius: 0;
     background-color: white;
     box-shadow: @sxt-shadow;
     position: relative;
+    height: 100%;
   }
   .sxt-reset-btn {
     position: absolute;
